# Algotrading

./: DataStore.py  README.md  Swapper.py  TinyData.py  aribitrage_strategy.py  assets.py  datastore.py  example.py  plot_utils.py  requirements.txt  setup.py  strategies.py  swap_example.ipynb  swapper.py  test.py  test_lorenzo.ipynb  timeseries.py  tinydata.py  wallets.py
algo/binance/: api.py  coins.py  compute_betas.py  evaluation.py  fit.py  tests.py
algo/blockchain/: algo_requests.py  base.py  cache.py  info.py  mixedstream.py  plot_price.py  process_data.py  process_prices.py  process_volumes.py  requests.py  sqlite.py  stream.py  test_data.py  timestamps.py  utils.py  wallets.py
algo/cpp/: CMakeLists.txt  series.cpp  series.h  series_tests.cpp
binance/: api.py  convert_l2_data.py  ob.py  read_l2_data.py
notebooks/: analyse_market_logs.ipynb  plot_prices.ipynb  plot_prices.py.ipynb  test_lorenzo.ipynb  tinychart_data.ipynb
scripts/: dailyLog.py  fetch_asset_info.py  fetch_pools.py  find_pools.py  load_cache_and_stream.py  make_oldprice_cache.py  make_oldvolume_cache.py  make_price_cache.py  make_price_report.py  make_volume_cache.py  marketLog.py  readLogs.py  serialise_candidate_asa.py  serialise_pools_info.py  serialise_universe.py  wallet_value.py
strategy/: analysis.py  strategies.py
stream/: aggregators.py  marketstream.py  sqlite.py
tests/: key.py  trades.py
tinychart_data/: datastore.py  tinydata.py
trade_logger/: base.py  text.py
trading/: tradingengine.py
unittests/: block_stream.py  dailydata.py  datastream.py  trades.py
(+58 files in other folders)
